--- a/styles/main.css
+++ b/styles/main.css
@@ -284,7 +284,8 @@ body {
 
 .e-other button {
     display: none;
-    width: 150px;
+    width: auto;
+    padding: 0 1.5em;
     font-weight: bold;
     height: 3em;
     color: #505050;;
@@ -1165,6 +1166,10 @@ span.ar {
     width: 700px;
 }
 
+.e-other {
+
+}
+
 .event-places-input {
     text-align: right;
     width: 50px;
@@ -1211,6 +1216,7 @@ span.ar {
 
 .event-more-b1 {
     position: relative;
+    margin-top: 0.7ex;
     float: left;
 }
 
@@ -1219,6 +1225,10 @@ span.ar {
     width: 400px;
     position: relative;
     padding-left: 5px;
+}
+
+.event-more-b2 span {
+   font-size: 0.9em;
 }
 
 .event-more-b2 div {
@@ -1956,11 +1966,11 @@ span.ar {
 .slide-menu {
     display: none;
     position: absolute;
-    width: 330px;
+    width: auto;
 
     top: 0;
     right: 0;
-    height: 140px;
+    height: auto;
     background: #8a7a55;
 
     /*border-radius: 0 0 5px 5px;*/
@@ -1984,8 +1994,8 @@ span.ar {
 
 .slide-menu div {
     position: relative;
-    float: right;
-    padding: 10px;
+    /*float: right;*/
+    padding: 10px !important;
     color: #ffffff;
     text-align: right;
 }
@@ -2013,8 +2023,8 @@ span.ar {
 
     /*margin: 0 auto;*/
     height: auto;
-    width: 190px;
-    padding: 15px;
+    width: auto;
+    padding: 15px !important;
     right: 20px;
     top: 0;
 }
@@ -2027,7 +2037,7 @@ span.ar {
 .user-menu div{
     /*margin: 0 auto;*/
     padding:5px 0;
-    padding-left: 5px;
+    padding-left: 100px !important;
 }
 
 .user-menu a:hover {
@@ -2192,12 +2202,12 @@ h2.reg-inputs{
 
 .events-wrp {
     padding: 15px 15px 0px 15px;
-    height: 180px;
+    height: 13em;
 }
 
-.hilited:hover .event-caption,
-.hilited:hover .event-cat,
-.hilited:hover img{
+.hilited .event-caption:hover,
+.hilited .event-cat:hover,
+.hilited img:hover{
     background: #dedddd;
     color: #505050;
 }
@@ -2233,7 +2243,7 @@ h2.reg-inputs{
     font-size: 0.9em;
     width: 700px;
     margin: 0 auto;
-    margin-bottom: 30px;
+    padding-bottom: 30px !important;
     color: #727d84;
 }
 
@@ -2297,4 +2307,13 @@ h2.reg-inputs{
 
 .last-bottom {
     border-bottom: 0;
+}
+
+
+#ch-email div {
+    width: 600px;
+}
+
+#acc-dell-wrp {
+    margin-bottom: 50px !important;
 }
